# monty

./: Dockerfile  README.md  docker-compose.yml  init-aws.sh  pyproject.toml  run_tests.sh
app/: config.py  main.py  services.py
localstack_data/cache/: machine.json
tests/: test_main.py
